#SUBDIRS=sql common obmysql sstable compactsstable compactsstablev2 rootserver mergeserver chunkserver updateserver compactsstable lsync client proxyserver importserver mrsstable
SUBDIRS=sql common  mergeserver chunkserver updateserver

# rules to auto generate svn_version.cpp
include $(top_srcdir)/svn_version.mk
